--- a/frontend/src/appPages/site/components/pages/home/GraduatesContent/GraduatesContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/GraduatesContent/GraduatesContent.module.scss
@@ -72,6 +72,7 @@
         width: 100%;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
         object-fit: cover;
+        height: 400px;
       }
     }
   }
