--- a/frontend/src/appPages/site/components/pages/home/GraduatesContent/GraduatesContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/GraduatesContent/GraduatesContent.module.scss
@@ -72,7 +72,7 @@
         width: 100%;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
         object-fit: cover;
-        height: 400px;
+        height: 100%;
       }
     }
   }
@@ -102,6 +102,10 @@
         max-width: 340px;
         height: auto;
         aspect-ratio: 1 / 1;
+            img {
+            width: 100%;
+            height: 100%;
+      }
       }
     }
   }
@@ -120,6 +124,10 @@
 
       .image {
         max-width: 280px;
+        img {
+            width: 100%;
+            height: 100%;
+      }
       }
     }
   }
