--- a/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
@@ -1,170 +1,160 @@
-#content {
-  background: url("../../../../../../assets/images/6W3A8933.JPG") no-repeat
-    center/cover;
-  min-height: 100vh;
+.content {
   position: relative;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
 
-  .content {
-    padding-top: 80px;
-    position: absolute;
-    bottom: 25px;
-    z-index: 2;
+.backgroundImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("../../../../../../assets/images/6W3A8933.JPG") no-repeat center/cover;
+  z-index: -2;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: -1;
+}
+
+.contentWrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  margin-bottom: 100px;
+}
+
+.profileImage {
+  margin-bottom: 20px;
+
+  img {
+    border: 4px solid #fff;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+  }
+}
+
+.text {
+  text-align: center;
+  color: #fff;
+
+  h1 {
+    font-size: 36px;
+    font-weight: 700;
+    margin-bottom: 10px;
   }
 
-  .profileImage {
-    display: flex;
+  h2 {
+    font-size: 24px;
+    font-weight: 300;
+  }
+}
+
+.subtext {
+  background-color: rgba(86, 57, 123, 0.8);
+  height: 100px;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .contentWrapper {
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    gap: 20px;
-    position: relative;
-    img {
-      position: absolute;
-      top: -10;
-      border: 4px solid #fff;
-      border-radius: 50%;
-      width: 200px;
-      height: 200px;
-    }
+    gap: 40px;
   }
 
   .text {
-    padding-top: 150px;
-    padding-left: 200px;
-    display: flex;
-    flex-direction: column;
-    color: #fff;
-    gap: 10px;
+    text-align: left;
+
     h1 {
-      font-size: 48px !important;
-      font-weight: 700;
+      font-size: 48px;
     }
 
     h2 {
       font-size: 30px;
-      font-weight: 200;
     }
+  }
+}
+
+@media (min-width: 1024px) {
+  .contentWrapper {
+    margin-bottom: 150px;
+  }
+
+  .profileImage img {
+    width: 250px;
+    height: 250px;
+  }
+
+  .text h1 {
+    font-size: 56px;
+  }
+
+  .text h2 {
+    font-size: 36px;
   }
 
   .subtext {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background-color: #56397bd2;
-    padding: 96px;
+    height: 120px;
   }
 }
 
-/* Tablet view */
-@media (max-width: 768px) {
-  #content {
-    .text {
-      padding: 0;
-      text-align: center;
-      h1 {
-        font-size: 56px;
-      }
+@media (max-width: 767px) {
+  .contentWrapper {
+    margin-bottom: 80px;
+  }
 
-      h2 {
-        font-size: 36px;
-      }
-    }
-    .profileImage {
-      display: flex;
-      justify-content: center;
-      img {
-        top: -200 !important;
-        width: 200px !important;
-        height: 200px !important;
-      }
-    }
-    .subtext {
-      padding: 170px !important;
-    }
+  .profileImage img {
+    width: 150px;
+    height: 150px;
+  }
+
+  .text h1 {
+    font-size: 28px;
+  }
+
+  .text h2 {
+    font-size: 20px;
+  }
+
+  .subtext {
+    height: 80px;
   }
 }
 
-@media (max-width: 430px) {
-  #content {
-    .profileImage {
-      display: flex;
-      justify-content: center;
-      img {
-        top: -130 !important;
-        width: 150px !important;
-        height: 150px !important;
-      }
-    }
-    .text {
-      padding: 0;
-      text-align: center;
-      h1 {
-        font-size: 26px !important;
-        padding-top: 10px !important;
-      }
-      h2 {
-        font-size: 20px !important;
-      }
-    }
-
-    .subtext {
-      padding: 110px !important;
-    }
+@media (max-width: 480px) {
+  .contentWrapper {
+    margin-bottom: 60px;
   }
-}
 
-@media (max-width: 320px) {
-  #content {
-    .profileImage {
-      display: flex;
-      justify-content: center;
-      img {
-        top: -74 !important;
-        width: 100px !important;
-        height: 100px !important;
-      }
-    }
-    .text {
-      padding-top: 20px !important;
-
-      h1 {
-        font-size: 20px !important;
-      }
-      h2 {
-        font-size: 16px !important;
-      }
-    }
-
-    .subtext {
-      padding: 88px !important;
-    }
+  .profileImage img {
+    width: 120px;
+    height: 120px;
   }
-}
 
-/* Larger screens */
-@media (max-width: 884px) {
-  #content {
-    .text {
-      padding: 20;
-      text-align: center;
-      h1 {
-        font-size: 64px;
-      }
-      h2 {
-        font-size: 42px;
-      }
-    }
+  .text h1 {
+    font-size: 24px;
+  }
 
-    .profileImage {
-      display: flex;
-      justify-content: center;
-      img {
-        top: -240;
-        width: 200px;
-        height: 200px;
-      }
-    }
+  .text h2 {
+    font-size: 18px;
+  }
 
-    .subtext {
-      padding: 190px;
-    }
+  .subtext {
+    height: 60px;
   }
 }
