--- a/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
@@ -1,90 +1,110 @@
 .content {
+  background: url("@/assets/images/6W3A8933.JPG") no-repeat center/cover;
+  min-height: 100vh;
   position: relative;
-  height: 100vh;
   display: flex;
   align-items: flex-end;
-}
-
-.backgroundImage {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: url("@/assets/images/6W3A8933.JPG") no-repeat center/cover;
-  z-index: -1;
 }
 
 .contentWrapper {
   width: 100%;
   background-color: rgba(86, 57, 123, 0.8);
   padding: 20px;
+  position: relative;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+}
+
+.profileImage {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  img {
+    border: 4px solid #fff;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+  }
 }
 
 .text {
-  display: flex;
-  align-items: center;
-  color: #fff;
+  margin-top: 100px;
   text-align: center;
-}
-
-.logo {
-  margin-right: 20px;
-
-  img {
-    border-radius: 50%;
-    border: 2px solid #fff;
-  }
-}
-
-h1 {
-  font-size: 24px;
-  font-weight: 700;
-  margin-bottom: 5px;
-}
-
-h2 {
-  font-size: 18px;
-  font-weight: 300;
-}
-
-@media (min-width: 768px) {
-  .contentWrapper {
-    padding: 30px;
-  }
-
-  .logo img {
-    width: 120px;
-    height: 120px;
-  }
+  color: #fff;
 
   h1 {
-    font-size: 32px;
+    font-size: 36px;
+    font-weight: 700;
+    margin-bottom: 10px;
   }
 
   h2 {
     font-size: 24px;
+    font-weight: 300;
   }
 }
 
-@media (min-width: 1024px) {
+@media (max-width: 768px) {
   .contentWrapper {
-    padding: 40px;
+    padding: 15px;
   }
 
-  .logo img {
+  .profileImage img {
     width: 150px;
     height: 150px;
   }
 
-  h1 {
-    font-size: 40px;
+  .text {
+    margin-top: 80px;
+
+    h1 {
+      font-size: 28px;
+    }
+
+    h2 {
+      font-size: 20px;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .profileImage img {
+    width: 120px;
+    height: 120px;
   }
 
-  h2 {
-    font-size: 28px;
+  .text {
+    margin-top: 70px;
+
+    h1 {
+      font-size: 24px;
+    }
+
+    h2 {
+      font-size: 18px;
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  .profileImage img {
+    width: 100px;
+    height: 100px;
+  }
+
+  .text {
+    margin-top: 60px;
+
+    h1 {
+      font-size: 20px;
+    }
+
+    h2 {
+      font-size: 16px;
+    }
   }
 }
