--- a/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
@@ -1,110 +1,170 @@
-.content {
-  background: url("@/assets/images/6W3A8933.JPG") no-repeat center/cover;
+#content {
+  background: url("../../../../../../assets/images/6W3A8933.JPG") no-repeat
+    center/cover;
   min-height: 100vh;
   position: relative;
-  display: flex;
-  align-items: flex-end;
-}
 
-.contentWrapper {
-  width: 100%;
-  background-color: rgba(86, 57, 123, 0.8);
-  padding: 20px;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+  .content {
+    padding-top: 80px;
+    position: absolute;
+    bottom: 25px;
+    z-index: 2;
+  }
 
-.profileImage {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  .profileImage {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    position: relative;
+    img {
+      position: absolute;
+      top: -10;
+      border: 4px solid #fff;
+      border-radius: 50%;
+      width: 200px;
+      height: 200px;
+    }
+  }
 
-  img {
-    border: 4px solid #fff;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
+  .text {
+    padding-top: 150px;
+    padding-left: 200px;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    gap: 10px;
+    h1 {
+      font-size: 48px !important;
+      font-weight: 700;
+    }
+
+    h2 {
+      font-size: 30px;
+      font-weight: 200;
+    }
+  }
+
+  .subtext {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: #56397bd2;
+    padding: 96px;
   }
 }
 
-.text {
-  margin-top: 100px;
-  text-align: center;
-  color: #fff;
-
-  h1 {
-    font-size: 36px;
-    font-weight: 700;
-    margin-bottom: 10px;
-  }
-
-  h2 {
-    font-size: 24px;
-    font-weight: 300;
-  }
-}
-
+/* Tablet view */
 @media (max-width: 768px) {
-  .contentWrapper {
-    padding: 15px;
-  }
+  #content {
+    .text {
+      padding: 0;
+      text-align: center;
+      h1 {
+        font-size: 56px;
+      }
 
-  .profileImage img {
-    width: 150px;
-    height: 150px;
-  }
-
-  .text {
-    margin-top: 80px;
-
-    h1 {
-      font-size: 28px;
+      h2 {
+        font-size: 36px;
+      }
     }
-
-    h2 {
-      font-size: 20px;
+    .profileImage {
+      display: flex;
+      justify-content: center;
+      img {
+        top: -200 !important;
+        width: 200px !important;
+        height: 200px !important;
+      }
+    }
+    .subtext {
+      padding: 170px !important;
     }
   }
 }
 
-@media (max-width: 480px) {
-  .profileImage img {
-    width: 120px;
-    height: 120px;
-  }
-
-  .text {
-    margin-top: 70px;
-
-    h1 {
-      font-size: 24px;
+@media (max-width: 430px) {
+  #content {
+    .profileImage {
+      display: flex;
+      justify-content: center;
+      img {
+        top: -130 !important;
+        width: 150px !important;
+        height: 150px !important;
+      }
+    }
+    .text {
+      padding: 0;
+      text-align: center;
+      h1 {
+        font-size: 26px !important;
+        padding-top: 10px !important;
+      }
+      h2 {
+        font-size: 20px !important;
+      }
     }
 
-    h2 {
-      font-size: 18px;
+    .subtext {
+      padding: 110px !important;
     }
   }
 }
 
 @media (max-width: 320px) {
-  .profileImage img {
-    width: 100px;
-    height: 100px;
-  }
+  #content {
+    .profileImage {
+      display: flex;
+      justify-content: center;
+      img {
+        top: -74 !important;
+        width: 100px !important;
+        height: 100px !important;
+      }
+    }
+    .text {
+      padding-top: 20px !important;
 
-  .text {
-    margin-top: 60px;
-
-    h1 {
-      font-size: 20px;
+      h1 {
+        font-size: 20px !important;
+      }
+      h2 {
+        font-size: 16px !important;
+      }
     }
 
-    h2 {
-      font-size: 16px;
+    .subtext {
+      padding: 88px !important;
+    }
+  }
+}
+
+/* Larger screens */
+@media (max-width: 884px) {
+  #content {
+    .text {
+      padding: 20;
+      text-align: center;
+      h1 {
+        font-size: 64px;
+      }
+      h2 {
+        font-size: 42px;
+      }
+    }
+
+    .profileImage {
+      display: flex;
+      justify-content: center;
+      img {
+        top: -240;
+        width: 200px;
+        height: 200px;
+      }
+    }
+
+    .subtext {
+      padding: 190px;
     }
   }
 }
