--- a/frontend/src/appPages/site/components/layout/header/Header.module.scss
+++ b/frontend/src/appPages/site/components/layout/header/Header.module.scss
@@ -38,9 +38,11 @@
     &.active {
       display: block;
     }
+
     .disp {
       display: none;
     }
+
     ul {
       list-style: none;
       display: flex;
@@ -91,21 +93,6 @@
         color: #fff;
       }
     }
-
-    .searchBtn {
-      background-color: #ffffff77;
-      border: 2px solid #fff;
-      border-top-right-radius: 12px;
-      border-bottom-right-radius: 12px;
-      border-left: none;
-      padding: 11px 18px;
-      cursor: pointer;
-      font-size: 14px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #4d2c5ebb;
-    }
   }
 
   .language {
@@ -135,6 +122,9 @@
   }
 
   .auth {
+    display: flex;
+    align-items: center;
+
     button {
       background-color: #4d2c5e;
       color: #fff;
@@ -144,6 +134,21 @@
       cursor: pointer;
       font-weight: 500;
       transition: opacity 0.3s ease;
+
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+
+    .profileButton {
+      background: none;
+      border: none;
+      color: #fff;
+      cursor: pointer;
+      font-size: 1rem;
+      padding: 0;
+      margin: 0;
+      font-weight: 500;
 
       &:hover {
         opacity: 0.8;
