--- a/frontend/src/appPages/site/components/layout/header/Header.module.scss
+++ b/frontend/src/appPages/site/components/layout/header/Header.module.scss
@@ -297,9 +297,9 @@
     background: none;
 
     .hamburger {
-      display: flex !important;
-      align-items: center !important;
-      font-size: 56px;
+      display: flex;
+      align-items: center;
+      font-size: 54px;
       color: #640ea7;
 
       cursor: pointer;
